--- a/config.yaml
+++ b/config.yaml
@@ -75,27 +75,21 @@ timeout: null
 # this is the welcome message that's shown to judges before they can start
 # using the system. the message is rendered as Markdown.
 welcome_message: |
-Welcome to the MenloHacks judging system.
+ Welcome to the MenloHacks judging system.
 
-**Please read this important message carefully before continuing.**
+ **Please read this important message carefully before continuing.**
 
-Gavel is a fully automated expo judging system that both tells you where to go
-and collects your votes.
+ Gavel is a fully automated expo judging system that both tells you where to go and collects your votes.
 
-The system is based on the model of pairwise comparison. You'll start off by
-looking at a single submission, and then for every submission after that,
-you'll decide whether it's better or worse than the one you looked at
-**immediately beforehand**.
+ The system is based on the model of pairwise comparison. You'll start off by looking at a single submission, and then for every submission after that, you'll decide whether it's better or worse than the one you looked at **immediately beforehand**.
 
-You can use the 'skip' option if you don't feel comfortable judging a project
-(for instance, if your kid is on the team).
+ You can use the 'skip' option if you don't feel comfortable judging a project (for instance, if your kid is on the team).
 
-**Please limit time spent on projects to 2-3 minutes.**
+ **Please limit time spent on projects to 2-3 minutes.**
 
-Gavel makes it really simple for you to submit votes, but please think hard
-before you vote. **Once you make a decision, you can't take it back**.
+ Gavel makes it really simple for you to submit votes, but please think hard before you vote. **Once you make a decision, you can't take it back**.
 
-Thank you for judging!
+ Thank you for judging!
 
 # can't be specified via environment variable
 # defaults to gavel.constants.DEFAULT_CLOSED_MESSAGE
